# sp23_cse168_finalproject

./: .gitignore  CMakeLists.txt  README.md
docs/: progress-report.md  progress.md  proposal.md  todo.md
docs/final-project-report/src/: SUMMARY.md  report.md
docs/imgs/: cbox-mis.exr  cbox-ppm.exr  render_info.txt
scenes/cbox/: cbox_area_light_dielectric.xml  cbox_area_light_dielectric_bricks.xml  cbox_water_caustic.xml  cbox_water_caustic_hq.xml  cbox_water_large_light.xml  cbox_water_point_light.xml
src/: brdf.cpp  brdf.h  camera.cpp  camera.h  lights.h  main.cpp  materials.h  mis.cpp  mis.h  next_event.cpp  next_event.h  ortho_basis.h  parse_scene.cpp  parse_scene.h  path_trace.cpp  path_trace.h  ppm.cpp  ppm.h  render.cpp  render.h  sampling.h  scene.cpp  scene.h  shapes.cpp  shapes.h  vector.h
